# bnp

./: .flake8  .gitignore  README.md  pyproject.toml
assets/: Suzanne.glb  box.fbx  box.glb  box.mtl  render_out.exr
assets/DamagedHelmet/: README.md
bnp/: __init__.py  conversion.py  io.py  mathfunc.py  scene.py
bnp/math/: __init__.py  rigging.py
bnp/objects/: __init__.py  armature.py  base.py  camera.py  light.py  mesh.py  obj.py  shading.py
bnp/scene/: __init__.py  clean.py  cleaner.py  io.py  visualize.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/modules/: conversion.rst  io.rst  math.rst  mathfunc.rst  objects.rst  scene.rst
docs/source/modules/math_modules/: rigging.rst
docs/source/modules/objects_modules/: armature.rst  base.rst  camera.rst  light.rst  mesh.rst  obj.rst  shading.rst
docs/source/modules/scene_modules/: clean.rst  io.rst  visualize.rst
docs/source/notes/: installation.rst
examples/: 001_load_mesh.py  002_lbs.py  003_blendshape.py  004_set_camera_and_render_image.py  005_assign_pbr_materials.py  get_armature.py  get_mesh.py
sample_scene/: 001_load_mesh.blend  002_lbs.blend  003_blendshape.blend  004_set_camera_and_render_image.blend
samples/: blendshape.blend  sample.blend  tiny_armature.blend
