[tool.poetry]
name = "bnp"
version = "0.1.0"
description = ""
authors = ["mocobt <mocobt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"fake-bpy-module-2.82" = "^20200514"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
